// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should properly render Slider component - shape circle, disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="sc-bcXHqe hsAQcy simpleui-switch-slider"
        id="4fzzzxjylrx"
        mode="light"
        shape="circle"
      >
        <span
          class="sc-gswNZR drzfKv simpleui-switch-dot"
          id="4fzzzxjylrx"
          mode="light"
          shape="circle"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="sc-bcXHqe hsAQcy simpleui-switch-slider"
      id="4fzzzxjylrx"
      mode="light"
      shape="circle"
    >
      <span
        class="sc-gswNZR drzfKv simpleui-switch-dot"
        id="4fzzzxjylrx"
        mode="light"
        shape="circle"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Slider should properly render Slider component - shape circle, enabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="sc-bcXHqe gYijzI simpleui-switch-slider"
        id="4fzzzxjylrx"
        mode="light"
        shape="circle"
      >
        <span
          class="sc-gswNZR drzfKv simpleui-switch-dot"
          id="4fzzzxjylrx"
          mode="light"
          shape="circle"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="sc-bcXHqe gYijzI simpleui-switch-slider"
      id="4fzzzxjylrx"
      mode="light"
      shape="circle"
    >
      <span
        class="sc-gswNZR drzfKv simpleui-switch-dot"
        id="4fzzzxjylrx"
        mode="light"
        shape="circle"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Slider should properly render Slider component - shape roundedSquare, disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="sc-bcXHqe dMBhPM simpleui-switch-slider"
        id="4fzzzxjylrx"
        mode="light"
        shape="roundedSquare"
      >
        <span
          class="sc-gswNZR dxaNzs simpleui-switch-dot"
          id="4fzzzxjylrx"
          mode="light"
          shape="roundedSquare"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="sc-bcXHqe dMBhPM simpleui-switch-slider"
      id="4fzzzxjylrx"
      mode="light"
      shape="roundedSquare"
    >
      <span
        class="sc-gswNZR dxaNzs simpleui-switch-dot"
        id="4fzzzxjylrx"
        mode="light"
        shape="roundedSquare"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Slider should properly render Slider component - shape roundedSquare, enabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="sc-bcXHqe dmLylq simpleui-switch-slider"
        id="4fzzzxjylrx"
        mode="light"
        shape="roundedSquare"
      >
        <span
          class="sc-gswNZR dxaNzs simpleui-switch-dot"
          id="4fzzzxjylrx"
          mode="light"
          shape="roundedSquare"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="sc-bcXHqe dmLylq simpleui-switch-slider"
      id="4fzzzxjylrx"
      mode="light"
      shape="roundedSquare"
    >
      <span
        class="sc-gswNZR dxaNzs simpleui-switch-dot"
        id="4fzzzxjylrx"
        mode="light"
        shape="roundedSquare"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Slider should properly render Slider component - shape square, disabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="sc-bcXHqe JYBJd simpleui-switch-slider"
        id="4fzzzxjylrx"
        mode="light"
        shape="square"
      >
        <span
          class="sc-gswNZR WwCXX simpleui-switch-dot"
          id="4fzzzxjylrx"
          mode="light"
          shape="square"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="sc-bcXHqe JYBJd simpleui-switch-slider"
      id="4fzzzxjylrx"
      mode="light"
      shape="square"
    >
      <span
        class="sc-gswNZR WwCXX simpleui-switch-dot"
        id="4fzzzxjylrx"
        mode="light"
        shape="square"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Slider should properly render Slider component - shape square, enabled 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="sc-bcXHqe dlnOhD simpleui-switch-slider"
        id="4fzzzxjylrx"
        mode="light"
        shape="square"
      >
        <span
          class="sc-gswNZR WwCXX simpleui-switch-dot"
          id="4fzzzxjylrx"
          mode="light"
          shape="square"
        />
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="sc-bcXHqe dlnOhD simpleui-switch-slider"
      id="4fzzzxjylrx"
      mode="light"
      shape="square"
    >
      <span
        class="sc-gswNZR WwCXX simpleui-switch-dot"
        id="4fzzzxjylrx"
        mode="light"
        shape="square"
      />
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
